# c17-63-n-python-react

./: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
app-front/: next.config.js  package-lock.json  package.json
app-front/public/: events.json
app-front/src/: App.tsx
app-front/src/api/: createEvent.ts  createEvent.tsx  eventCategories.tsx  eventDetailsPopup.tsx  homeUser.tsx  login.tsx  postRegisterUser.ts  userInterests.tsx
app-front/src/app/: page.tsx
app-front/src/app/Main/Page/: Main.tsx
app-front/src/app/MainScreen/: Page.tsx
app-front/src/app/TopEvents/: page.tsx
app-front/src/app/createEvent/: page.tsx
app-front/src/app/home/: page.tsx
app-front/src/app/login/: page.module.css  page.tsx
app-front/src/app/main/: page.tsx
app-front/src/app/passwordUpdate/: page.tsx
app-front/src/app/recoverPassword/: page.tsx
app-front/src/app/register/: page.tsx
app-front/src/app/selectInterests/: page.module.css  page.tsx
app-front/src/app/signUp/: page.tsx
app-front/src/components/atoms/Btn/: Btn.model.ts  Btn.module.css  Btn.tsx
app-front/src/components/svgs/: Icon.model.ts  IconArrow.tsx  IconClose.tsx  IconGoogle.tsx  IconLockEye.tsx  SearchIcon.tsx
app-front/src/options/: Alpha2Code.option.ts  models.ts
apps/base/: models.py  permissions.py
apps/base/fixtures/: events_event.json  events_event_category.json  events_user_interests.json  users_user.json
apps/events/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
apps/events/migrations/: 0001_initial.py  0002_alter_event_limit_alter_event_price_and_more.py  0003_alter_eventcategory_description_interests.py
apps/stores/: admin.py  models.py  serializers.py  urls.py  views.py
apps/stores/migrations/: 0001_initial.py
apps/users/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
apps/users/utils/: gen_words.py  word_engine.py
backend/: README.md
core/: asgi.py  settings.py  urls.py  wsgi.py
core/settings/: base.py  develop.py  production.py
fixtures/: events_event.json  events_event_category.json  events_user_interests.json  users_user.json
frontend/: README.md
(+34 files in other folders)
